# M-Cube

./: Dockerfile.backend  Dockerfile.frontend.dev  LICENSE  README.md  desktop_backend_entry.py  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
agents/: compare_agents.py  drafter_agents.py  oa_agents.py
api/: routers.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/services/: apiClient.ts
scripts/: build_backend_sidecar.py  frontend_desktop_smoke_test.ps1
services/: llm_factory.py
tests/: conftest.py
tools/: doc_parser.py
workflows/: compare_workflow.py  draft_workflow.py  oa_workflow.py  polish_workflow.py
