[project]
name = "m-cube"
version = "0.1.0"
description = "M-Cube (M³) — Multi-thinking, Multimodal, Multi-verification Patent Drafting Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "pydantic>=2.8,<3.0",
    "chromadb>=0.5,<1.0",
    "faiss-cpu>=1.8,<2.0",
    "langchain-huggingface>=0.1,<1.0",
    "PyMuPDF>=1.24,<2.0",
    "python-docx==1.1.2",
    "Pillow>=10.0,<12.0",
    "pdf2image>=1.17,<2.0",
    "pywin32>=306; platform_system=='Windows'",
    "python-multipart>=0.0.9,<1.0",
    "sse-starlette>=2.1,<3.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]
build = [
    "pyinstaller>=6.10,<7.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# Inherit from existing pytest.ini if present; this is a no-op when pytest.ini is the source of truth.
